--- a/fsc_demo_1/app/src/main/res/values/strings.xml
+++ b/fsc_demo_1/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
 
     <string name="hello_first_fragment">Tomato says you\'re doing great</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="channel_name">tomato</string>
+    <string name="channel_description">tomato</string>
+    <string name="reminder">Reminder</string>
 </resources>
